fixing view recipie spacing

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -41,7 +41,7 @@ $navbar-default-border: white;
 }
 .comments{
  margin: 8%;
- margin-top: -15%;
+
   margin-left: 30%;
   padding: 5%;
   font-size: 11px;
